syntax = "proto3";

package ac;

import "frame.proto";
import "input_event.proto";
import "routine.proto";

message Packet {
  oneof type {
    FrameOperation frame_operation = 1;  // various frame-related ops
    ac.InputEvent input_event = 2;       // forwarding mouse up/down/move
    Configuration configuration = 3;     // sync client with server
    ac.Routine routine = 4;              // sync server routine with client
    ac.Routine get_routine = 5;          // sync client routine with server
  }
}

message FrameOperation {
  Operation type = 1;
  Frame frame = 2;
  repeated Frame frames = 3;  // frame/frames is mutually exclusive, based on op
  enum Operation {
    OPERATION_UNSPECIFIED = 0;
    OPERATION_SAVE = 1;  // persist on backend (currently requires frame.data)
    OPERATION_GET = 2;  // request frame (frame.data will be filled in response)
    OPERATION_BATCH_GET = 3;  // request a bunch of frames (used at startup)
  }
}

message Configuration {
  int32 width = 1;
  int32 height = 2;
}
